<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_version">2.0.1</string>
    <string name="packet_name">minhna.android.giodicho</string>
    <string name="not_available">Not available</string>
    <string name="original_app_name">Pocket Basket</string>
    <string name="app_name">Pocket Basket</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>
    <string name="action_about">About</string>
    <string name="title_activity_basket_adapter">BasketAdapter</string>
    <string name="item">item&#160;&#160;</string>
    <string name="items">items</string>
    <string name="slash">/</string>
    <string name="addList">Add list</string>
    <string name="addItem">Add item</string>
    <string name="sharing">Share</string>
    <string name="modify">Edit</string>
    <string name="delete">Remove</string>
    <string name="view_detail">View Detail</string>
    <string name="done">DONE</string>
    <string name="clear_list">Clear List</string>
    <string name="yellow">Yellow</string>
    <string name="cyan">Cyan</string>
    <string name="purple">Purple</string>
    <string name="deepOrange">Orange</string>
    <string name="red">Red</string>
    <string name="lime">Lime</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="listName">List Name</string>
    <string name="listNameHint">Title</string>
    <string name="add_item_guide">Press + button to add item</string>
    <string name="title_activity_adding_item">AddingItemActivity</string>
    <string name="adding_item_title">Add item</string>
    <string name="delete_all">Remove all</string>
    <string name="delete_choice">Remove buyed item</string>
    <string name="delete_complete">Remove done</string>
	<string name="itemNameHint">Item Name</string>
	<string name="add">Add</string>
	<string name="title">Title</string>
	<string name="quantity">Quantity</string>
	<string name="one">1</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="alert_do_this">Do this task ?</string>
	<string name="alert_do_this_desc_list">All lists and items will be cleared.</string>
	<string name="alert_do_this_desc_item">All items will be cleared.</string>
	<string name="chooseAction">Choose action</string>
	<string name="emptyList">Empty list</string>
	<string name="authorName">Minh Nguyen</string>
	<string name="authorEmail">aminh1603@gmail.com</string>
	<string name="tip">Tour Guide</string>
	<string name="close">Close</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="description">Description (note, address&#8230; )</string>
	<string name="get_more">Get more</string>
	<string name="no_network">No network connection</string>
    <string name="sort_reverse">Reverse list</string>
    <string name="deleted">deleted</string>
    <string name="Set_reminder">Set Reminder</string>
    <string name="Not_allowed_past">The time cannot be the past</string>
    <string name="Setup_reminder_done">The reminder has been setup</string>
    <string name="Do_not_forget">Do not miss!</string>
</resources>
