<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    
    <item
        android:id="@+id/action_share"
        android:title="@string/sharing"
        android:icon="@drawable/ic_share_white_36dp"
        app:showAsAction="always"/>
   
    <item
	    android:id="@+id/more_option2"
	    android:title=""
	    android:icon="@drawable/ic_arrow_drop_down_circle_white_24dp"
	    app:showAsAction="always">
    	<menu>
			<item
		        android:id="@+id/action_delete_all_item"
		        android:title="@string/delete_all"
		        android:icon="@drawable/ic_delete_black_36dpp"
				app:showAsAction="always|withText" />
			
			<item
		        android:id="@+id/action_delete_choice"
		        android:title="@string/delete_choice"
		        android:icon="@drawable/ic_delete_select"
				app:showAsAction="always|withText" />
			
			<item
		        android:id="@+id/action_modify"
		        android:title="@string/modify"
		        android:icon="@drawable/ic_mode_edit_black_36dp"
		        app:showAsAction="always|withText"/>
		</menu>
	</item>
	
</menu>
