<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/white"
    tools:context="minhna.android.giodicho.AddingItemActivity" >
    
    <android.support.v7.widget.Toolbar
      	android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/grey_bar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="horizontal"
	    android:weightSum="1" >
	    <EditText
	        android:id="@+id/itemNameEdtTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/itemNameHint"
	        android:layout_weight="0.7" />
	    <EditText
	            android:id="@+id/itemQuantityEdtTxt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:gravity="center"
	            android:text="@string/one"
	            android:inputType="number" />
	   </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
	        android:orientation="vertical" >

	        <EditText
	            app:id="@+id/tvItemDesc"
	            app:layout_width="match_parent"
	            app:layout_height="wrap_content"
	            app:hint="@string/description" />
	
	        <Button
	            android:id="@+id/addItemBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="end"
	            android:layout_marginTop="@dimen/activity_vertical_margin"
	            android:text="@string/add"
	            android:onClick="addItem" />

		</LinearLayout>
    
</LinearLayout>
