<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#37474f"
  android:orientation="vertical"
  android:weightSum="20">
    
    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1.85"
      app:cardBackgroundColor="@color/grey" >
	      <android.support.v7.widget.AppCompatTextView
	       	    android:id="@+id/titleGuide"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
	            android:layout_gravity="start|center"
	            android:text="@string/tip"
	            android:textSize="20sp"
	            android:textStyle="bold"
	            android:textColor="@color/grey_bar" />
	      <android.support.v7.widget.AppCompatButton
	       	    android:id="@+id/exitGuide"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="@dimen/activity_horizontal_margin"
	            android:layout_gravity="end|center"
	            android:text="@string/close"
	            android:textStyle="bold"
	            android:textColor="@color/grey_bar" />
    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_weight="16.15"
      app:cardCornerRadius="4dp"
      app:cardBackgroundColor="@color/grey" >

        <android.support.v4.view.ViewPager
		        android:id="@+id/vpImages"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		 ></android.support.v4.view.ViewPager>
		    
	</android.support.v7.widget.CardView>
	
    <FrameLayout
             android:layout_width="match_parent"
    		 android:layout_height="0dp"
    		 android:layout_weight="2"
    		 android:layout_marginTop="10dp"
		     android:layout_marginLeft="@dimen/activity_horizontal_margin"
		     android:layout_marginRight="@dimen/activity_horizontal_margin"
		     android:layout_marginBottom="@dimen/activity_vertical_margin" >
	      <android.support.v7.widget.AppCompatButton
	       	    android:id="@+id/backGuide"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start|bottom"
	            android:text="@string/back"
	            android:textStyle="bold"
	            android:textColor="@color/grey_bar" />

		<me.relex.circleindicator.CircleIndicator
			android:id="@+id/vp_indicator"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			app:ci_animator="@animator/scale_with_alpha"
			app:ci_drawable="@drawable/white_radius"
			android:layout_gravity="center_horizontal|bottom"/>
    
		<android.support.v7.widget.AppCompatButton
			android:id="@+id/nextGuide"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|bottom"
			android:text="@string/next"
			android:textStyle="bold"
			android:textColor="@color/grey_bar" />
	</FrameLayout>
	
</LinearLayout>

