<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_grey_light">
    <LinearLayout
        android:id="@+id/action_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="onMenuItemClick"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="@dimen/item_drawer_left_size"
            android:layout_height="@dimen/item_drawer_left_size"
            android:src="@drawable/ic_help_outline_black_36dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/text_drawer_left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/action_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="onMenuItemClick"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="@dimen/item_drawer_left_size"
            android:layout_height="@dimen/item_drawer_left_size"
            android:src="@drawable/ic_person_black_36dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_support"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/text_drawer_left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/action_get_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="onMenuItemClick"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="@dimen/item_drawer_left_size"
            android:layout_height="@dimen/item_drawer_left_size"
            android:src="@drawable/ic_extension_black_36dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_more"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/text_drawer_left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/action_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="onMenuItemClick"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="@dimen/item_drawer_left_size"
            android:layout_height="@dimen/item_drawer_left_size"
            android:src="@drawable/ic_launcher"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_about"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/text_drawer_left"/>
    </LinearLayout>
</LinearLayout>